// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storyshots components/visualize/TableView default 1`] = `
<div
  style="height: 100%;"
>
  <div>
    <div
      class="
      p-py-1
      p-d-flex
      p-jc-between
      p-flex-wrap
      lck-data-toolbar
    "
    >
      <div
        class="p-d-flex p-flex-wrap"
      >
        <div
          class="lck-overlay-panel"
        >
          <button
            class="p-button p-component p-button-outlined p-button-secondary"
            disabled="disabled"
            type="button"
          >
            <span
              class="pi pi-filter p-button-icon p-button-icon-left"
            />
             
            <span
              class="p-button-label"
            >
              no filter
            </span>
             
            <!---->
            <span
              class="p-ink"
            />
          </button>
           
          <!---->
        </div>
      </div>
       
      <div
        class="p-d-flex p-flex-wrap"
      >
        <!---->
         
        <!---->
      </div>
    </div>
     
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`storyshots components/visualize/TableView with definition 1`] = `
<div
  style="height: 100%;"
>
  <div>
    <div
      class="
      p-py-1
      p-d-flex
      p-jc-between
      p-flex-wrap
      lck-data-toolbar
    "
    >
      <div
        class="p-d-flex p-flex-wrap"
      >
        <div
          class="lck-overlay-panel"
        >
          <button
            class="p-button p-component p-button-outlined p-button-secondary"
            disabled="disabled"
            type="button"
          >
            <span
              class="pi pi-filter p-button-icon p-button-icon-left"
            />
             
            <span
              class="p-button-label"
            >
              no filter
            </span>
             
            <!---->
            <span
              class="p-ink"
            />
          </button>
           
          <!---->
        </div>
      </div>
       
      <div
        class="p-d-flex p-flex-wrap"
      >
        <!---->
         
        <!---->
      </div>
    </div>
     
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`storyshots components/visualize/TableView with definition and content 1`] = `
<div
  style="height: 100%;"
>
  <div>
    <div
      class="
      p-py-1
      p-d-flex
      p-jc-between
      p-flex-wrap
      lck-data-toolbar
    "
    >
      <div
        class="p-d-flex p-flex-wrap"
      >
        <div
          class="lck-overlay-panel"
        >
          <button
            class="p-button p-component p-button-outlined p-button-secondary"
            type="button"
          >
            <span
              class="pi pi-filter p-button-icon p-button-icon-left"
            />
             
            <span
              class="p-button-label"
            >
              no filter
            </span>
             
            <!---->
            <span
              class="p-ink"
            />
          </button>
           
          <!---->
        </div>
      </div>
       
      <div
        class="p-d-flex p-flex-wrap"
      >
        <!---->
         
        <!---->
      </div>
    </div>
     
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`storyshots components/visualize/TableView with definition and content and toolbar buttons 1`] = `
<div
  style="height: 100%;"
>
  <div>
    <div
      class="
      p-py-1
      p-d-flex
      p-jc-between
      p-flex-wrap
      lck-data-toolbar
    "
    >
      <div
        class="p-d-flex p-flex-wrap"
      >
        <div
          class="lck-overlay-panel"
        >
          <button
            class="p-button p-component p-button-outlined p-button-secondary"
            type="button"
          >
            <span
              class="pi pi-filter p-button-icon p-button-icon-left"
            />
             
            <span
              class="p-button-label"
            >
              no filter
            </span>
             
            <!---->
            <span
              class="p-ink"
            />
          </button>
           
          <!---->
        </div>
      </div>
       
      <div
        class="p-d-flex p-flex-wrap"
      >
        <button
          class="p-mr-2 p-button p-component"
          type="button"
        >
          <span
            class="pi pi-plus-circle p-button-icon p-button-icon-left"
          />
           
          <span
            class="p-button-label"
          >
            Add
          </span>
           
          <!---->
          <span
            class="p-ink"
          />
        </button>
         
        <div
          class="lck-dropdownbutton"
        >
          <button
            aria-controls="pv_id_5_overlay"
            aria-haspopup="true"
            class="lck-dropdownbutton-menubutton p-button p-component p-button-secondary button-with-icon"
            type="button"
          >
            <span
              class="pi pi-download p-button-icon p-button-icon-left"
            />
             
            <span
              class="p-button-label"
            >
              Export as
            </span>
             
            <!---->
            <span
              class="p-ink"
            />
          </button>
           
          <!---->
        </div>
      </div>
    </div>
     
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`storyshots components/visualize/TableView with definition and toolbar buttons 1`] = `
<div
  style="height: 100%;"
>
  <div>
    <div
      class="
      p-py-1
      p-d-flex
      p-jc-between
      p-flex-wrap
      lck-data-toolbar
    "
    >
      <div
        class="p-d-flex p-flex-wrap"
      >
        <div
          class="lck-overlay-panel"
        >
          <button
            class="p-button p-component p-button-outlined p-button-secondary"
            disabled="disabled"
            type="button"
          >
            <span
              class="pi pi-filter p-button-icon p-button-icon-left"
            />
             
            <span
              class="p-button-label"
            >
              no filter
            </span>
             
            <!---->
            <span
              class="p-ink"
            />
          </button>
           
          <!---->
        </div>
      </div>
       
      <div
        class="p-d-flex p-flex-wrap"
      >
        <button
          class="p-mr-2 p-button p-component"
          type="button"
        >
          <span
            class="pi pi-plus-circle p-button-icon p-button-icon-left"
          />
           
          <span
            class="p-button-label"
          >
            Add
          </span>
           
          <!---->
          <span
            class="p-ink"
          />
        </button>
         
        <div
          class="lck-dropdownbutton"
        >
          <button
            aria-controls="pv_id_4_overlay"
            aria-haspopup="true"
            class="lck-dropdownbutton-menubutton p-button p-component p-button-secondary button-with-icon"
            disabled="disabled"
            type="button"
          >
            <span
              class="pi pi-download p-button-icon p-button-icon-left"
            />
             
            <span
              class="p-button-label"
            >
              Export as
            </span>
             
            <!---->
            <span
              class="p-ink"
            />
          </button>
           
          <!---->
        </div>
      </div>
    </div>
     
    <!---->
     
    <!---->
  </div>
</div>
`;
